# HPC

./: .gitignore  README.md  addVector.cu
MPI/: README.md  helloWorld.cpp
MPI/mpi_add_vector/: add_vector.c  add_vector.cpp  add_vector.sh
MPI/mpi_hello_world/: helloWorld.c  helloWorld.cpp  hello_world.sh
MPI/mpi_mult_matrix/: mult_matrix.c  mult_matrix.cpp  mult_matrix.sh
MPI/mpi_send_recv/: send_recv.c  send_recv.cpp  send_recv.sh
OpenCV/: displayImage.cpp
Parcial I/: README.md  m  matrixMulTiled.cu
Parcial II/: CMakeLists.txt  INFORME.md  README.md  mult_matrix.cpp  mult_matrix.sh  mult_matrix_cuda.cu  mult_matrix_mpi.cpp
blur/: CMakeLists.txt  README.md  blur.cu
convolution/: .clang-format  CMakeLists.txt  convolution_1D.cu  convolution_2D.cu
displayImg/: .gitignore  CMakeLists.txt  README.md  displayImage.cpp
filter/: CMakeLists.txt  README.md  imgGray  imgGray.cu
matrixMult/: CMakeLists.txt  matrix_mult.cu  matrix_mult_tiles.cu
openMP/: Makefile  addVector.cpp  hello.cpp  hello.sh  matrix.sh
sobel/: CMakeLists.txt  sobelFilter  sobelFilter.cu
